--- a/stylesheets/modules/custom-footer.less
+++ b/stylesheets/modules/custom-footer.less
@@ -338,6 +338,7 @@ button#add-to-cart.is-disabled {
 		}
 	}
 }
+
 .site-logo-container {
 	margin: 20px 0;
 	@media (min-width: 768px) {
@@ -348,6 +349,7 @@ button#add-to-cart.is-disabled {
 	}
 	& img {
 		max-width: 225px;
+		cursor: pointer;
 		@media (min-width: 768px) {
 			max-width: 290px;
 		}
