--- a/stylesheets/modules/page-header.less
+++ b/stylesheets/modules/page-header.less
@@ -57,6 +57,11 @@ width:88% !important;
       ul li svg{
         height: 40px;
         width: 40px;
+        margin: 0 auto;
+        @media (min-width: 1025px) {
+            padding: 10px 0;
+            height: initial;
+        }
     }
 }
 .ech-shi-footer-links .hide-mobile{
@@ -68,7 +73,12 @@ width:88% !important;
 .sticky-icons{
 	margin-top:20px !important;
 	transition: all 0.4s ease;
-	}
+    @media (min-width: 1025px) {
+        margin-top: 0 !important;
+        display: block;
+        height: inherit;
+    }
+}
 .searchbox-float{
 top:15px !important;
 }
@@ -301,22 +311,26 @@ transition: all 0.1s ease;
                     @media (min-width: 1025px) {
                         font-size: 9px;
                         bottom: 46px;
+                        line-height: initial;
+                        vertical-align: initial;
                     }
                     @media (min-width: 1200px) {
                         font-size: 12px;
                         bottom: 52px;
                     }
                     .my-fixed-header-bar & {
-                        right: initial;
+                        right: auto;
                         left: 2px;
                         bottom: 40px;
                         @media (min-width: 1025px) {
                             font-size: 7px;
-                            left: initial;
-                            right: -2px;
-                        }
-                        @media (min-width: 1200px) {
-                           right: 1px;
+                            left: -1px;
+                            bottom: 100%;
+                            width: 100%;
+                            display: flex;
+                            height: 85%;
+                            align-items: center;
+                            justify-content: center; 
                         }
                     }              
 			}
@@ -331,6 +345,14 @@ login welcome panel
         display: block;
         position: absolute;
         width: 175px;
+    }
+    @media (min-width: 1025px) {
+        &:nth-child(2) {
+            display: none;
+        }
+    }
+    @media (min-width: 1200px) {
+        top: 0;
     }
 }
 /*
@@ -347,7 +369,7 @@ div.welcome-text-container{
     display: none;
     position:fixed;
     z-index: 99999;
-    top: 25px;
+    top: 22px;
     right: -21px;   
     div.top-gap-container {
         height: 20px;
@@ -364,10 +386,11 @@ div.welcome-text-container{
         top: 30px;
         right: -24px;
         @media (min-width: 1025px) {
-            right: -27px;
+            right: -22px;
+            top: 39px;
         }
         @media (min-width: 1200px) {
-            right: -23px;
+            right: -19px;
         }
     }
     div.pop-tip{
@@ -457,7 +480,7 @@ font-size: 16px;
         height: @utilityNavHeight;
         @media (min-width: 1025px) {
             position: relative;
-            right: initial;
+            right: auto;
             left: 10px;
             top: 10px;
         }
