--- a/stylesheets/modules/soft-cart.less
+++ b/stylesheets/modules/soft-cart.less
@@ -22,7 +22,7 @@
   position: absolute;
   display: none;
   right: -5px;
-  top: 45px;
+  top: 43px;
   .box-shadow(~"0 0 15px rgba(0,0,0,0.2)");
   width: 417px;
   z-index: 9999;
@@ -40,9 +40,10 @@
     right: 0;
     @media (min-width: 1025px) {
       right: -3px;
+      top: 59px !important;
     }
     @media (min-width: 1200px) {
-      right: 4px;
+      right: 8px;
     }
   }
 
